<resources>
    <string name="app_name">Ejercicios 2do Parcial</string>
    <string name="button_widgets">WIDGETS</string>
    <string name="advanced_widgets">Advanced Widgets</string>
    <string name="activity_drawer">Activity Drawer</string>
    <string name="name">Diego A. Medina</string>
    <string name="Copy">Copy</string>
    <string name="Delete">Eliminar</string>
    <string name="Favorite">Favorito</string>
    <string name="Home">Home</string>
</resources>