<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_widgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_widgets"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_AdvancedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_widgets"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/button_widgets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_DrawerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_drawer"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_AdvancedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_Home"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        app:layout_constraintTop_toBottomOf="@id/btn_DrawerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>